# OpenSuperWhisper

./: .gitignore  Bridge.h  CLAUDE.md  Readme.md  run.sh
OpenSuperWhisper/: AmplitudeRingRecordButton.swift  AudioMeterService.swift  AudioRecorder.swift  ContentView.swift  FileDropHandler.swift  MicrophoneService.swift  ModelDownloadView.swift  ModifierShortcutManager.swift  OpenSuperWhisper-Info.plist  OpenSuperWhisperApp.swift  PermissionsManager.swift  RecordingStateManager.swift  Settings.swift  ShortcutManager.swift  ShortcutRecorderView.swift  SystemAudioRecorder.swift  TranscriptionService.swift  WhisperModelManager.swift
OpenSuperWhisper.xcodeproj/: project.pbxproj
OpenSuperWhisper/Dictionary/: DictionaryManager.swift  GlossaryBuilder.swift
OpenSuperWhisper/Editor/: EditorConstraints.swift  EditorCoordinator.swift  EditorDebugManager.swift  EditorInput.swift  EditorOutputParser.swift  EditorPrompts.swift  EditorTypes.swift  ModeGuard.swift  OpenAIEditor.swift  OutputMode.swift  TextEditor.swift  TranscriptPostProcessor.swift
OpenSuperWhisper/Indicator/: IndicatorWindow.swift  IndicatorWindowManager.swift
OpenSuperWhisper/LLM/: AppleFoundationLLMService.swift  LLMMemoryManager.swift  LLMModelManager.swift  LLMServiceFactory.swift  LLMServiceProtocol.swift
OpenSuperWhisper/Models/: DictionaryEntry.swift  Recording.swift  UserDictionary.swift
OpenSuperWhisper/Onboarding/: OnboardingView.swift
OpenSuperWhisper/Utils/: AppPreferences.swift  ClipboardUtil.swift  FocusUtils.swift  LanguageUtil.swift  Typography.swift
OpenSuperWhisperTests/: EditorGuardsTests.swift
docs/: LLM-EDITOR-SPEC.md
libllama/: CMakeLists.txt
libwhisper/: CMakeLists.txt
